--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 class="flex rounded-2xl items-center py-2 px-5 shadow-lg bg-opacity-10 backdrop-blur-md relative dark:border-2 dark:border-gray-800">
                 <button name="toggle-theme" id="toggle-theme"
                     class="  font-popins-semibold text-sm flex flex-1 justify-center ">
-                    Привет! <span class="font-popins-black text-xl"> Я, Олег</span>
+                    Это <span class="font-popins-black text-xl"> Я!</span>
 
                     <span class="hidden dark:inline"> <i class="fa-solid fa-moon"></i></span> <span
                         class="dark:hidden inline"><i class="fa-solid fa-sun"></i></span>
@@ -102,13 +102,13 @@
                 <div class="flex-1 md:flex justify-around hidden">
                     <a href="#hero" class=" font-popins-semibold text-sm flex items-center justify-center">
                         <i class="fa-solid fa-house mr-2"></i>
-                        Home
+                        Главная
                     </a>
                     <a href="#about" class=" font-popins-semibold text-sm flex items-center justify-center">
-                        About
+                        Обо мне
                     </a>
                     <a href="#contact" class=" font-popins-semibold text-sm flex items-center justify-center">
-                        Contact
+                        Контакты
                     </a>
                 </div>
                 <button id="open-btn" name="open-btn"
@@ -129,7 +129,7 @@
                     data-aos="fade-right">
                     <div>
                         <h1 class="text-sm xl:text-base">
-                            Hi there, its me! <br>
+                            Привет! Я, Олег <br>
                             <span class=" font-popins-black text-2xl xl:text-4xl tracking-wider">
                                 MY NAME
                             </span>
