--- a/index.html
+++ b/index.html
@@ -129,18 +129,16 @@
                     data-aos="fade-right">
                     <div>
                         <h1 class="text-sm xl:text-base">
-                            Привет! Я, Олег <br>
+                            Привет! Я <br>
                             <span class=" font-popins-black text-2xl xl:text-4xl tracking-wider">
-                                MY NAME
+                                Олег Баженов
                             </span>
                         </h1>
                         <h2 class=" text-sm xl:text-base">
-                            I am a web developer!
+                            Я мобильный разработчик!
                         </h2>
                         <div class=" text-xs xl:text-sm mt-2">
-                            <p class=" text-justify">I’m a passionate developer from India, constantly diving into new
-                                tech challenges. My curiosity fuels daily discoveries and an endless quest for
-                                knowledge.</p>
+                            <p class=" text-justify">Я недавно закончил Балтийский Федеральный Университет им. Канта, специальность "Математическое обеспечение и администрирование инфомационных систем. Я только начал свой путь, каждый день практикуюсь и изучаю новые технологии. На данный момент создал 4 pet-проекта, которые можно посмотреть ниже, либо на github"</p>
                         </div>
                         <div class=" flex justify-start items-center gap-10 mt-2 flex-wrap">
                             <a href="https://github.com/sreekesh-k" aria-label="Visit Sreekesh's GitHub profile"
