--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/favicon.svg">
-    <title>Portfolio - By Sreekesh K Prabhu</title>
+    <title>Портфолио Олег Баженов</title>
     <!-- SEO -->
-    <meta name="description" content="This is a free open source portfolio created by Sreekesh K Prabhu" />
+    <meta name="description" content="Портфолио Олега Баженова" />
     <meta name="keywords"
-        content="Free portfolio, portfolio, Sreekesh K Prabhu, opensource portfolio, JavaScript, html, css" />
-    <meta name="author" content="Sreekesh K Prabhu" />
+        content="Портфолио Олега Баженова" />
+    <meta name="author" content="Олег Баженов" />
 
     <meta property="og:title" content="Portfolio Template By Sreekesh K Prabhu" />
     <meta property="og:description"
@@ -131,11 +131,11 @@
                         <h1 class="text-sm xl:text-base">
                             Привет! Я <br>
                             <span class=" font-popins-black text-2xl xl:text-4xl tracking-wider">
-                                Олег Баженов
+                                ОЛЕГ БАЖЕНОВ
                             </span>
                         </h1>
                         <h2 class=" text-sm xl:text-base">
-                            Я мобильный разработчик!
+                            Мобильный разработчик!
                         </h2>
                         <div class=" text-xs xl:text-sm mt-2">
                             <p class=" text-justify">Я недавно закончил Балтийский Федеральный Университет им. Канта, специальность "Математическое обеспечение и администрирование инфомационных систем. Я только начал свой путь, каждый день практикуюсь и изучаю новые технологии. На данный момент создал 4 pet-проекта, которые можно посмотреть ниже, либо на github"</p>
@@ -195,28 +195,19 @@
                 id="about">
                 <div data-aos="fade-up">
                     <h1 class=" font-popins-black text-2xl md:text-4xl"><span
-                            class=" text-border dark:text-gray-300">ABOUT</span> ME</h1>
+                            class=" text-border dark:text-gray-300">ОБО</span> МНЕ</h1>
                     <div class=" text-justify mt-5">
-                        <p><span class="font-popins-bold underline tracking-tighter">Whoami?</span>
-                            visit my
-                            <a href="https://sreekeshkprabhu.me/" target="_blank" rel="noopener noreferrer"
-                                aria-label="sreekesh k prabhu" title="sreekesh"
-                                class=" tracking-tighter font-popins-black underline">
-                                portfolio
-                            </a>
-                            to know more
+                        <p><span class="font-popins-bold underline tracking-tighter">Кто я?</span>
                             <br>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, consectetur necessitatibus,
-                            suscipit quod, dolor voluptate ipsa architecto dolores nostrum excepturi qui perspiciatis
-                            aperiam obcaecati ducimus tempore vel eius ut labore.
+                            Я выпусник университета, который хочет влиться в сферу IT и найти свою первую работу. За время обучения я освоил базовые знания про базы данных, разработку сайтов, написание скриптов, университет дал мне базу, которую нужно расширять, сейчас я углубился в изучение фреймворков и библиотек для мобильной разработки.
                         </p>
                     </div>
                     <div class=" text-justify mt-5">
-                        <p><span class="font-popins-bold underline tracking-tighter">EducationQualification</span>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda molestias consequatur
-                            perspiciatis totam officia tenetur explicabo nulla repellendus tempore sunt corporis unde
-                            quas
-                            ullam, hic ipsum asperiores deleniti. Sapiente, libero.</p>
+                        <p><span class="font-popins-bold underline tracking-tighter">Образование</br></span>
+                            Высшее образование</br>
+                            Университет: Балтийский Федеральный Университет имени Иммануила Канта</br>
+                            Специальность: Математическое обеспечение и администрирование информационных систем
+                            </p>
                     </div>
 
                 </div>
@@ -228,10 +219,10 @@
                     <div class="scroller max-w-md md:max-w-xl xl:max-w-2xl" data-speed="fast">
                         <ul
                             class="tag-list scroller__inner font-popins-semibold tracking-tighter uppercase text-sm md:text-base xl:text-xl">
-                            <li><i class="fa-brands fa-html5"></i>HTML</li>
-                            <li><i class="fa-brands fa-css"></i>CSS</li>
-                            <li><i class="fa-brands fa-js"></i>JS</li>
-                            <li><i class="fa-brands fa-php"></i>PHP</li>
+                            <li><i class="fa-brands fa-html5"></i>KOTLIN</li>
+                            <li><i class="fa-brands fa-css"></i>HTML</li>
+                            <li><i class="fa-brands fa-js"></i>CSS</li>
+                            <li><i class="fa-brands fa-php"></i>C++</li>
                             <li><i class="fa-brands fa-java"></i>JAVA</li>
                             <li><i class="fa-brands fa-python"></i>PYTHON</li>
                         </ul>
@@ -242,12 +233,12 @@
                     <div class="scroller max-w-md md:max-w-xl xl:max-w-2xl" data-speed="slow" data-direction="right">
                         <ul
                             class="tag-list scroller__inner font-popins-semibold tracking-tighter uppercase text-sm md:text-base xl:text-xl">
-                            <li><i class="fa-brands fa-react"></i>React</li>
-                            <li><i class="fa-brands fa-node"></i>Node</li>
-                            <li><i class="fa-brands fa-python"></i>Django</li>
-                            <li><i class="fa-brands fa-php"></i>Laravel</li>
-                            <li><i class="fa-brands fa-c"></i>Asp.Net</li>
-                            <li><i class="fa-brands fa-s"></i>SvelteKit</li>
+                            <li><i class="fa-brands fa-react"></i>Jetpack Compose</li>
+                            <li><i class="fa-brands fa-node"></i>Room</li>
+                            <li><i class="fa-brands fa-python"></i>Retrofit</li>
+                            <li><i class="fa-brands fa-php"></i>Coroutines</li>
+                            <li><i class="fa-brands fa-c"></i>Compose Navigation</li>
+                            <li><i class="fa-brands fa-s"></i>Material3</li>
                         </ul>
                     </div>
                     <!-- FRAMEWORK -->
@@ -258,10 +249,10 @@
                             class="tag-list scroller__inner font-popins-semibold tracking-tighter uppercase text-sm md:text-base xl:text-xl">
                             <li><i class="fa-brands fa-git"></i>GIT</li>
                             <li><i class="fa-brands fa-docker"></i>docker</li>
-                            <li><i class="fa-brands fa-k"></i>kubernetes</li>
+                            <li><i class="fa-brands fa-k"></i>CD/CI</li>
                             <li><i class="fa-brands fa-github"></i>Github</li>
-                            <li><i class="fa-brands fa-aws"></i>aws</li>
-                            <li><i class="fa-brands fa-a"></i>Azure</li>
+                            <li><i class="fa-brands fa-aws"></i>Gitlab</li>
+                            <li><i class="fa-brands fa-a"></i>Clean Arhitecture</li>
                         </ul>
                     </div>
                     <!-- DEVOPS -->
@@ -269,117 +260,11 @@
             </section>
             <!-- ABOUT -->
 
-            <!-- Experience -->
-            <section class=" mt-2 mb-2 flex  flex-col  items-center py-5 px-5  relative overflow-hidden" id="expirence">
-                <h1 class=" font-popins-black text-2xl md:text-4xl mb-10" data-aos="fade-up">Work<span
-                        class=" text-border dark:text-gray-300"> Experience</span>
-                </h1>
-
-                <div class="flex xl:gap-0 gap-2 w-full flex-col lg:flex-row ">
-                    <!-- Experience1 -->
-                    <div class="border-2 border-black dark:border-gray-800 h-64 md:h-80 aspect-square px-5 py-5 flex flex-col w-full justify-center"
-                        data-aos="fade-up">
-                        <div class=" flex gap-2 text-base md:text-xl xl:text-2xl font-popins-semibold items-center">
-                            <div>
-                                <i class="fa-solid fa-desktop"></i>
-                            </div>
-                            <div>
-                                <h2>
-                                    Software Developer DotNEtCore
-                                </h2>
-
-                            </div>
-                        </div>
-
-                        <div class=" text-sm md:text-base mt-5">
-                            <div class="text-gray-500">
-                                &lt;h3&gt;
-                            </div>
-                            <div class=" text-justify flex">
-                                <p class="ml-5 pl-2 border-l border-l-gray-500 py-3">
-                                    Experienced in both functional and OOP: Dart, Python, Java, JavaScript, TypeScript.
-                                </p>
-
-                            </div>
-                            <div class="text-gray-500">
-                                &lt;h3&gt;
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Experience2 -->
-                    <div class="border-2 border-black dark:border-gray-800  h-64 md:h-80 aspect-square px-5 py-5 flex flex-col w-full justify-center"
-                        data-aos="fade-up">
-                        <div class=" flex gap-2 text-base md:text-xl xl:text-2xl font-popins-semibold items-center">
-                            <div>
-                                <i class="fa-brands fa-flutter"></i>
-                            </div>
-                            <div>
-                                <h2>
-                                    Flutter Developer Android,IOS
-
-                                </h2>
-                            </div>
-                        </div>
-
-                        <div class=" text-sm md:text-base mt-5">
-                            <div class="text-gray-500">
-                                &lt;h3&gt;
-                            </div>
-                            <div class=" text-justify flex justify-center items-center">
-                                <p class="ml-5 pl-2 border-l border-l-gray-500 py-3 ">
-                                    Skilled in developing hybrid mobile apps and cross-platform solutions using the
-                                    Flutter framework.
-                                </p>
-
-                            </div>
-                            <div class="text-gray-500">
-                                &lt;h3&gt;
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Experience3 -->
-                    <div class="border-2 border-black dark:border-gray-800  h-64 md:h-80 aspect-square px-5 py-5 flex flex-col w-full justify-center"
-                        data-aos="fade-up">
-                        <div class=" flex gap-2 text-base md:text-xl xl:text-2xl font-popins-semibold items-center">
-                            <div>
-                                <i class="fa-brands fa-react"></i>
-                            </div>
-                            <div>
-                                <h2>
-                                    Frontend Dev ReactJs, NextJs
-                                </h2>
-                            </div>
-                        </div>
-
-                        <div class=" text-sm md:text-base mt-5">
-                            <div class="text-gray-500">
-                                &lt;h3&gt;
-                            </div>
-                            <div class=" text-justify flex justify-center items-center">
-                                <p class="ml-5 pl-2 border-l border-l-gray-500 py-3">
-                                    Skilled in developing hybrid mobile apps and cross-platform solutions using the
-                                    Flutter
-                                    framework.
-                                </p>
-
-                            </div>
-                            <div class="text-gray-500">
-                                &lt;h3&gt;
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </section>
-            <!-- Experience -->
-
             <!-- LatestWork -->
             <section class="flex mt-2 mb-2 flex-col  justify-center py-5 px-5 relative overflow-hidden">
                 <div class="flex items-center w-full text-center gap-2 mb-5" data-aos="fade-up">
                     <div class="h-[.1rem] bg-gray-400 dark:bg-gray-500 flex-1"></div>
-                    <div class="text-gray-500  ">some of my latest work</div>
+                    <div class="text-gray-500  ">Мои pet-проекты!</div>
                     <div class="h-[.1rem] bg-gray-400  dark:bg-gray-500 flex-1"></div>
                 </div>
 
@@ -390,15 +275,13 @@
                         <a href="#" data-aos="fade-up"
                             class="group border-2  dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
-                                <img src="assets/images/image-placeholder.webp" alt="project1"
+                                <img src="assets/images/VoiceDairyCollage.jpg" alt="project1" style="max-width: 100%; height: auto;",
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
-                            <h2 class="text-base font-popins-bold">project-1</h2>
+                            <h2 class="text-base font-popins-bold">Голосовой дневник</h2>
 
                             <p class="text-sm  mt-2">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis facilis quae,
-                                quaerat vero asperiores eum quod voluptas et? Sunt, dolore in illo libero a possimus
-                                voluptatem delectus. Quos, modi unde!
+                                Голосовой дневник - приложение для ведения личного дневника с помощью голосового ввода. Приложение преобразует речь в текст, позволяя сохранять свои мысли в виде теста. Записи нигде не потеряются и позволят оконуться в воспоминания в любой момент!
                             </p>
                             <p class="float-right "><i class=" fa-solid fa-code"></i></i></p>
                         </a>
@@ -409,12 +292,10 @@
                                 <img src="assets/images/image-placeholder.webp" alt="project1"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
-                            <h2 class="text-base  font-popins-bold">project-2</h2>
+                            <h2 class="text-base  font-popins-bold">Погодное приложение</h2>
 
                             <p class="text-sm mt-2">
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis, qui officia obcaecati
-                                quod laborum rem itaque, mollitia atque, labore accusantium similique maiores amet
-                                quisquam error. Nobis harum esse officiis aliquid!
+                                Приложение для просмотра погоды в различных городах. Показывает температуру воздуха, осадки, влажность, скорость ветра в выбранной местности, либо по местоположению пользователя!
                             </p>
                             <p class="float-right "><i class=" fa-solid fa-code"></i></i></p>
                         </a>
@@ -422,15 +303,13 @@
                         <a href="#" data-aos="fade-up"
                             class="group border-2 dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
-                                <img src="assets/images/image-placeholder.webp" alt="project1"
+                                <img src="assets/images/" alt="project1"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
-                            <h2 class="text-base font-popins-bold">project-3</h2>
+                            <h2 class="text-base font-popins-bold">AutoSnap</h2>
 
                             <p class="text-sm mt-2">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, dolore quis, fugit
-                                sapiente necessitatibus dolores, ex numquam voluptates iste autem rem quam repellendus
-                                velit eveniet? Quidem corrupti excepturi dolorum a?
+                                Клиент-серверное мобильное приложение для автоматизации записи и управления процессами в автосервисах. Разработано в качестве дипломной работы. Приложение предоставляет единую платформу для взаимодействия автовладельцев и сервисных центров, устраняя необходимость в телефонных звонках и упрощая процесс бронирования услуг.
                             </p>
                             <p class="float-right "><i class=" fa-solid fa-code"></i></i></p>
                         </a>
