--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 class="flex rounded-2xl items-center py-2 px-5 shadow-lg bg-opacity-10 backdrop-blur-md relative dark:border-2 dark:border-gray-800">
                 <button name="toggle-theme" id="toggle-theme"
                     class="  font-popins-semibold text-sm flex flex-1 justify-center ">
-                    Это <span class="font-popins-black text-xl"> Я!</span>
+                    Смени <span class="font-popins-black text-xl"> ТЕМУ</span>
 
                     <span class="hidden dark:inline"> <i class="fa-solid fa-moon"></i></span> <span
                         class="dark:hidden inline"><i class="fa-solid fa-sun"></i></span>
@@ -179,11 +179,8 @@
 
                 <!-- HERO TOP/RIGHT -->
                 <div class="flex relative h-full xl:flex-1" data-aos="zoom-in">
-                    <div
-                        class="absolute w-1/2 -translate-x-1/2 -translate-y-1/2 blob aspect-square bg-black dark:bg-gray-800 top-1/2 left-1/2">
-                    </div>
-                    <img class=" invert drop-shadow-lg absolute object-cover h-full -translate-x-1/2 -translate-y-1/2 xl:h-auto xl:w-2/3 top-1/2 hover:scale-105 left-1/2"
-                        src="./assets/favicon.svg" alt="Hero">
+                    <img class="drop-shadow-lg absolute object-cover h-full -translate-x-1/2 -translate-y-1/2 xl:h-auto xl:w-2/3 top-1/2 hover:scale-105 left-1/2"
+                        src="./assets/images/main-photo.png" alt="MyPhoto">
                 </div>
                 <!-- HERO TOP/RIGHT -->
             </section>
@@ -289,7 +286,7 @@
                         <a href="#" data-aos="fade-up"
                             class="group border-2  dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
-                                <img src="assets/images/image-placeholder.webp" alt="project1"
+                                <img src="assets/images/WeatherCollage.jpg" alt="project1" style="max-width: 100%; height: auto;"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
                             <h2 class="text-base  font-popins-bold">Погодное приложение</h2>
@@ -303,7 +300,7 @@
                         <a href="#" data-aos="fade-up"
                             class="group border-2 dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
-                                <img src="assets/images/" alt="project1"
+                                <img src="assets/images/AutoSnapCollage.jpg" alt="project1" style="max-width: 100%; height: auto;"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
                             <h2 class="text-base font-popins-bold">AutoSnap</h2>
