--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             Мобильный разработчик!
                         </h2>
                         <div class=" text-xs xl:text-sm mt-2">
-                            <p class=" text-justify">Я недавно закончил Балтийский Федеральный Университет им. Канта, специальность "Математическое обеспечение и администрирование инфомационных систем. Я только начал свой путь, каждый день практикуюсь и изучаю новые технологии. На данный момент создал 4 pet-проекта, которые можно посмотреть ниже, либо на github"</p>
+                            <p class=" text-justify">Я недавно закончил Балтийский Федеральный Университет им. Канта, специальность "Математическое обеспечение и администрирование инфомационных систем. Я только начал свой путь, каждый день практикуюсь и изучаю новые технологии. На данный момент создал несколько pet-проектов, которые можно посмотреть ниже, либо на github"</p>
                         </div>
                         <div class=" flex justify-start items-center gap-10 mt-2 flex-wrap">
                             <a href="https://github.com/FlyingPanda2" aria-label="Посмотри мой профиль на github"
