--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <!-- SEO -->
 
     <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="anim.css">
+
 </head>
 
 <body
@@ -130,7 +131,7 @@
                             Мобильный разработчик!
                         </h2>
                         <div class=" text-xs xl:text-sm mt-2">
-                            <p class=" text-justify">Я недавно закончил Балтийский Федеральный Университет им. Канта, специальность "Математическое обеспечение и администрирование инфомационных систем. Я только начал свой путь, каждый день практикуюсь и изучаю новые технологии. На данный момент создал несколько pet-проектов, которые можно посмотреть ниже, либо на github"</p>
+                            <p class=" text-justify">Я недавно закончил Балтийский Федеральный Университет им. Канта, специальность "Математическое обеспечение и администрирование инфомационных систем". Я только начал свой путь, каждый день практикуюсь и изучаю новые технологии. На данный момент создал несколько pet-проектов, которые можно посмотреть ниже, либо на github"</p>
                         </div>
                         <div class=" flex justify-start items-center gap-10 mt-2 flex-wrap">
                             <a href="https://github.com/FlyingPanda2" aria-label="Посмотри мой профиль на github"
@@ -162,8 +163,7 @@
                 class="mt-2 mb-2 flex  xl:flex-row-reverse flex-col text-center items-center py-5 px-5 relative overflow-hidden"
                 id="about">
                 <div data-aos="fade-up">
-                    <h1 class=" font-popins-black text-2xl md:text-4xl"><span
-                            class=" text-border dark:text-gray-300">ОБО</span> МНЕ</h1>
+                    <h1 class=" font-popins-black text-2xl md:text-4xl">ОБО МНЕ</h1>
                     <div class=" text-justify mt-5">
                         <p><span class="font-popins-bold underline tracking-tighter">Кто я?</span>
                             <br>
@@ -274,7 +274,7 @@
                                 <img src="assets/images/AutoSnapCollage.jpg" alt="project1" style="max-width: 100%; height: auto;"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
-                            <h2 class="text-base font-popins-bold">AutoSnap</h2>
+                            <h2 class="text-base">AutoSnap</h2>
 
                             <p class="text-sm mt-2">
                                 Клиент-серверное мобильное приложение для автоматизации записи и управления процессами в автосервисах. Разработано в качестве дипломной работы. Приложение предоставляет единую платформу для взаимодействия автовладельцев и сервисных центров, устраняя необходимость в телефонных звонках и упрощая процесс бронирования услуг.
@@ -291,7 +291,7 @@
             <section class="flex mt-2 mb-2 flex-col items-center justify-center py-5 px-5 relative overflow-hidden"
                 data-aos="zoom-in" id="contact">
                 <h1 class=" font-popins-black text-2xl md:text-4xl"><span
-                        class=" text-border dark:text-gray-300 uppercase">Свяжись со мной!</span>
+                        class="  dark:text-gray-300 uppercase">Свяжись со мной!</span>
                     </h1>
                 <form class="w-full  py-2 px-2 ">
                     <div class="contact-container">
